# restaurant-kitchen-service

./: README.md  build.sh  pyproject.toml
kitchen/: admin.py  forms.py  models.py  urls.py  views.py
kitchen/migrations/: 0001_initial.py
kitchen/static/assets/css/: soft-design-system.css  soft-design-system.css.map  soft-design-system.min.css
kitchen/static/assets/scss/soft-design-system/: _variables.scss
kitchen/static/css/: styles.css
restaurant_kitchen_service/: settings.py  urls.py
static/css/: styles.css
templates/: base-presentation.html  base.html
templates/includes/: footer.html  navigation.html  pagination.html  sidebar.html
templates/kitchen/: cook_confirm_delete.html  cook_detail.html  cook_form.html  cook_list.html  dish_confirm_delete.html  dish_detail.html  dish_form.html  dish_list.html  dish_type_confirm_delete.html  dish_type_form.html  dish_type_list.html  index.html
templates/layouts/: base-fullscreen.html
templates/registration/: logged_out.html  login.html
